# polysolaris

./: .gitignore  README.md  body.py  loadplanets.py  main.py  planets.json  pyproject.toml  requirements.txt  solar_system.json  solar_system.py  test.py  vector.py
.github/workflows/: publish.yml
data/: predicted_system.json
src/ThreeBodyProblem/: train.py  train_paral.py
src/ThreeBodyProblem/RL_agent/: generate_system_json.py  model.py
src/ThreeBodyProblem/env/: three_body_gym.py
src/polysolaris.egg-info/: SOURCES.txt
src/system_simulation/: body.py  loadplanets.py  main.py  simulation.py  solar_system.py  solar_system_demo.py  system_collision_demo.py  test.py
src/system_simulation/data/: predicted_system.json
